--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,8 +1,12 @@
-<div class="business-search">
+<div class="business-search" data-controller="business-search">
   <h1>Find Local Businesses</h1>
   
   <div class="search-form">
-    <%= form_with url: businesses_path, method: :get, local: false, id: "business-search-form" do |form| %>
+    <%= form_with url: businesses_path, method: :get, local: false, 
+                  data: { 
+                    business_search_target: "searchForm",
+                    action: "submit->business-search#search"
+                  } do |form| %>
       <div class="form-group">
         <%= form.label :category, "Business Category:" %>
         <%= form.select :category, options_for_select([["All Categories", ""]] + @categories.map { |cat| [cat.titleize, cat] }, params[:category]), {}, { class: "form-control" } %>
@@ -10,27 +14,37 @@
       
       <div class="form-group">
         <%= form.label :distance_miles, "Search Radius:" %>
-        <%= form.range_field :distance_miles, min: 0.5, max: 25, step: 0.5, value: params[:distance_miles] || 5, class: "form-control range-slider" %>
-        <span class="range-value"><span id="distance-display">5</span> miles</span>
+        <%= form.range_field :distance_miles, min: 0.5, max: 25, step: 0.5, value: params[:distance_miles] || 5, 
+                             class: "form-control range-slider",
+                             data: { 
+                               business_search_target: "distanceSlider",
+                               action: "input->business-search#updateDistanceDisplay"
+                             } %>
+        <span class="range-value">
+          <span data-business-search-target="distanceDisplay">5</span> miles
+        </span>
       </div>
       
       <div class="form-group">
-        <button type="button" id="use-location-btn" class="btn btn-primary">
+        <button type="button" class="btn btn-primary"
+                data-business-search-target="useLocationBtn"
+                data-action="click->business-search#useLocation">
           📍 Use My Location
         </button>
-        <span id="location-status" class="location-status"></span>
+        <span data-business-search-target="locationStatus" class="location-status"></span>
       </div>
       
-      <%= form.hidden_field :lat %>
-      <%= form.hidden_field :lng %>
+      <%= form.hidden_field :lat, data: { business_search_target: "latField" } %>
+      <%= form.hidden_field :lng, data: { business_search_target: "lngField" } %>
       
       <div class="form-group">
-        <%= form.submit "Search Businesses", class: "btn btn-success", disabled: true, id: "search-btn" %>
+        <%= form.submit "Search Businesses", class: "btn btn-success", disabled: true,
+                        data: { business_search_target: "searchBtn" } %>
       </div>
     <% end %>
   </div>
   
-  <div id="search-results">
+  <div data-business-search-target="searchResults">
     <% if params[:lat].present? && @businesses.any? %>
       <h3>Found <%= @businesses.count %> businesses:</h3>
       <div class="businesses-list">
